--- a/blogfit/src/pages/inicio/style.scss
+++ b/blogfit/src/pages/inicio/style.scss
@@ -1,4 +1,12 @@
 html,body{
     width: 100vw;
-    background-color: rgb(145, 171, 197);
+}
+#sectionArtigos{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-image: url('../../../public/imgs/capa.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
