--- a/blogfit/src/pages/inicio/components/artigos/style.scss
+++ b/blogfit/src/pages/inicio/components/artigos/style.scss
@@ -39,48 +39,61 @@
     justify-content: center;
     background-color: rgb(0, 0, 0);
     font-family: 'Work Sans', sans-serif;
+    color: rgb(41, 224, 224);
 }
 #conteudoTopoArtigo{
     width: 85%;
     display: flex;
     justify-content: space-between;
 }
-#estrelas{
+#likes{
     display: inline-block;
-    color: yellow;
-    font-size: 17px;
 }
-
+#artigo{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+}
 #tituloArtigo{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 5vh;
-    padding-top: 30px;
+    text-align: center;
     font-family: 'Castoro Titling', cursive;
-    font-size: 25px;
+    font-size: 24px;
     font-weight: bolder;
-    color: rgb(14, 137, 137);
+    color: rgb(16, 100, 100);
+    height: 33.333%;
+    background-color: rgba(0, 0, 0, 0.318);
+    width: 100%;
+}
+#tituloArtigo:hover{
+    cursor: pointer;
 }
 #corpoArtigo{
     width: 80%;
-    height: 40vh;
-    margin-bottom: 5vh;
+    height: 33.333%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 #corpoArtigo p{
-    font-size: 21.5px;
+    font-size: 17px;
     letter-spacing: 1.4px;
-    padding-top: 25px;
+    font-weight: 600;
 }
 #footerArtigo{
-    height: 15vh;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     font-family: 'Work Sans', sans-serif;
     font-weight: bolder;
-    font-size: 20px;
+    font-size: 25px;
+    color: rgb(16, 100, 100);
+    height: 33.333%;
 }
 #footerArtigo p:hover{
     cursor: pointer;
