--- a/blogfit/src/components/header/style.scss
+++ b/blogfit/src/components/header/style.scss
@@ -18,6 +18,19 @@ $contentHeaderWidth: calc($pageWidth/3);
     text-decoration: none;
     color: white;
     font-size: 20px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#artigos, #criar, #contato{
+    background-color: rgb(16, 84, 112);
+}
+#linksWrap a:hover{
+    background-color: rgb(226, 239, 244);
+    color: black;
+    cursor: pointer;
 }
 #buttonsSpace{
     width: $contentHeaderWidth;
@@ -25,6 +38,8 @@ $contentHeaderWidth: calc($pageWidth/3);
     justify-content: center;
     align-items: center;
     height: 6vh;
+    font-family: sans-serif;
+    letter-spacing: 1px;
 }
 #buttonsTab{
     width: 12vh*1.3;
