--- a/blogfit/src/pages/inicio/components/artigos/style.scss
+++ b/blogfit/src/pages/inicio/components/artigos/style.scss
@@ -67,6 +67,7 @@
     height: 33.333%;
     background-color: rgba(0, 0, 0, 0.318);
     width: 100%;
+    user-select: none;
 }
 #tituloArtigo:hover{
     cursor: pointer;
