--- a/blogfit/src/components/header/style.scss
+++ b/blogfit/src/components/header/style.scss
@@ -1,53 +1,53 @@
-$pageWidth:100vw;
+$pageWidth: 100vw;
 $contentHeaderWidth: calc($pageWidth/3);
-#headerWrap{
-    width: $pageWidth;
-    height: 6vh;
-    background-color: rgb(0, 0, 0);
-    position: sticky;
-    display: flex;
+#headerWrap {
+  height: 6vh;
+  background-color: rgb(0, 0, 0);
+  position: sticky;
+  display: flex;
 }
-#linksWrap{
-    width: $contentHeaderWidth;
-    height: 6vh;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+#linksWrap {
+  width: $contentHeaderWidth;
+  height: 6vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
-#linksWrap a{
-    text-decoration: none;
-    color: white;
-    font-size: 20px;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#linksWrap a {
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-#artigos, #criar, #contato{
-    background-color: rgb(16, 84, 112);
+#artigos,
+#criar,
+#contato {
+  background-color: rgb(16, 84, 112);
 }
-#linksWrap a:hover{
-    background-color: rgb(226, 239, 244);
-    color: black;
-    cursor: pointer;
+#linksWrap a:hover {
+  background-color: rgb(226, 239, 244);
+  color: black;
+  cursor: pointer;
 }
-#buttonsSpace{
-    width: $contentHeaderWidth;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 6vh;
-    font-family: sans-serif;
-    letter-spacing: 1px;
+#buttonsSpace {
+  width: $contentHeaderWidth;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 6vh;
+  font-family: sans-serif;
+  letter-spacing: 1px;
 }
-#buttonsTab{
-    width: 12vh*1.3;
-    display: flex;
-    justify-content: flex-end;
-
+#buttonsTab {
+  width: 12vh * 1.3;
+  display: flex;
+  justify-content: flex-end;
 }
-#blankSpace{
-    width: $contentHeaderWidth;
-    height: 6vh;
+#blankSpace {
+  width: $contentHeaderWidth;
+  height: 6vh;
 }
