--- a/blogfit/src/components/header/components/loginButton/Login.module.scss
+++ b/blogfit/src/components/header/components/loginButton/Login.module.scss
@@ -7,6 +7,8 @@
     align-items: center;
     color: white;
     font-weight: bolder;
+    min-width: fit-content;
+    letter-spacing: normal;
 }
 #loginWrap:hover{
 cursor: pointer;
