--- a/blogfit/src/pages/login/Login.module.scss
+++ b/blogfit/src/pages/login/Login.module.scss
@@ -1,12 +1,45 @@
-#sectionlogin {
+#sectionLogin {
   width: 100vw;
-}
-form {
+  height: 84vh;
+  background-image: url("../../../public/imgs/gym.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+#formLogin {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   flex-direction: column;
-  height: 50vh;
+  width: 400px;
+  height: 250px;
+  border: 1.5px solid;
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 15px;
+  color: white;
+}
+.inputInfoUser {
+  width: 70%;
+  height: 30px;
+  margin-bottom: 5%;
+  border: solid 1px;
+  border-radius: 1px;
+  text-align: center;
+}
+#button {
+  border: 1px solid rgb(95, 95, 95);
+  background-color: rgb(0, 0, 0);
+  box-shadow: 10px;
+  color: rgb(255, 255, 255);
+  width: 30%;
+  height: 30px;
+  border-radius: 10px;
+}
+#button:hover {
+  cursor: pointer;
 }
 #errorMessage {
   text-align: center;
@@ -20,4 +53,7 @@ form {
 }
 #register:hover {
   cursor: pointer;
+}
+#contaH2 {
+  font-size: 20px;
 }
