--- a/blogfit/src/pages/login/Login.module.scss
+++ b/blogfit/src/pages/login/Login.module.scss
@@ -57,3 +57,14 @@
 #contaH2 {
   font-size: 20px;
 }
+@media (max-width: 1200px) {
+}
+@media (max-width: 1024px) {
+}
+@media (max-width: 768px) {
+}
+@media (max-width: 480px) {
+  #contaH2 {
+    background-color: rgba(168, 168, 144, 0.445);
+  }
+}
