--- a/blogfit/src/pages/profile/Profile.module.scss
+++ b/blogfit/src/pages/profile/Profile.module.scss
@@ -32,3 +32,11 @@
 #logOut:hover {
   cursor: pointer;
 }
+@media (max-width: 1200px) {
+}
+@media (max-width: 1024px) {
+}
+@media (max-width: 768px) {
+}
+@media (max-width: 480px) {
+}
