--- a/blogfit/src/components/header/style.scss
+++ b/blogfit/src/components/header/style.scss
@@ -51,3 +51,26 @@ $contentHeaderWidth: calc($pageWidth/3);
   width: $contentHeaderWidth;
   height: 6vh;
 }
+@media (max-width: 1600px) {
+}
+@media (max-width: 1200px) {
+}
+@media (max-width: 1024px) {
+}
+@media (max-width: 768px) {
+}
+@media (max-width: 480px) {
+  #linksWrap {
+    width: auto;
+  }
+  #linksWrap a:nth-of-type(2) {
+    margin-left: 20px;
+    text-align: center;
+  }
+  #buttonsTab {
+    width: auto;
+  }
+  #buttonsSpace {
+    width: auto;
+  }
+}
