--- a/blogfit/src/pages/artigo/Artigo.module.scss
+++ b/blogfit/src/pages/artigo/Artigo.module.scss
@@ -66,3 +66,47 @@ h6 {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+@media (max-width: 1200px) {
+}
+@media (max-width: 1024px) {
+}
+@media (max-width: 768px) {
+}
+@media (max-width: 480px) {
+  #artigoBox {
+    width: 90%;
+  }
+  #menuArtigo {
+    width: 100%;
+    border-bottom: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+  #menuArtigo h1 {
+    width: 60%;
+    font-size: 20px;
+    font-weight: bolder;
+  }
+  #menuArtigo .menuItem {
+    width: 20%;
+    font-size: 15px;
+  }
+  p,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+  #corpoArtigoBox {
+    font-size: 18px;
+  }
+  #conteudoArtigo {
+    width: 80%;
+  }
+}
